--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,72 @@
-.idea
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Virtual environment folders
+venv/
+env/
+.venv/
+.env/
+
+# macOS-specific files
 .DS_Store
+.AppleDouble
+.LSOverride
+
+# Windows-specific files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# PyCharm files
+.idea/
+*.iml
+*.iws
+
+# JetBrains IDEs (shared across PyCharm, WebStorm, etc.)
+.idea/*
+
+# Python dependency files
+*.egg-info/
+.eggs/
+dist/
+build/
+*.egg
+*.pyo
+*.whl
+
+# Testing output
+.tox/
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints
+
+# Logs and coverage reports
+logs/
+*.log
+*.cover
+*.coverage.*
+
+# Database and local environment files
+*.env
+*.env.*
+
+# Package managers (pipenv, poetry)
+Pipfile
+Pipfile.lock
+poetry.lock
+__pypackages__/
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+.lock-wscript
+.lock
